[gd_scene load_steps=4 format=3 uid="uid://dqry8j4x5lpdk"]

[ext_resource type="Script" path="res://scripts/ui/DialogueUI.gd" id="1_dialogue"]
[ext_resource type="Texture2D" path="res://assets/ui/wireframe/shadedLight01.png" id="2_dialogue_bg"]
[ext_resource type="Texture2D" path="res://assets/ui/wireframe/shadedLight02.png" id="3_dialogue_panel"]

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
script = ExtResource("1_dialogue")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_dialogue_bg")
mouse_filter = 2
modulate = Color(1, 1, 1, 0.9)

[node name="DialoguePanel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -250.0
offset_right = 500.0
offset_bottom = -20.0
texture = ExtResource("3_dialogue_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="NPCInfo" type="HBoxContainer" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2

[node name="NPCPortrait" type="NinePatchRect" parent="DialoguePanel/VBoxContainer/NPCInfo"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
texture = ExtResource("3_dialogue_panel")

[node name="PortraitLabel" type="Label" parent="DialoguePanel/VBoxContainer/NPCInfo/NPCPortrait"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
text = "üë§"
horizontal_alignment = 1
vertical_alignment = 1
modulate = Color(0, 0, 0, 1)

[node name="NPCNameContainer" type="VBoxContainer" parent="DialoguePanel/VBoxContainer/NPCInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NPCName" type="Label" parent="DialoguePanel/VBoxContainer/NPCInfo/NPCNameContainer"]
layout_mode = 2
text = "NPC Name"
theme_type_variation = &"HeaderMedium"
modulate = Color(0, 0, 0, 1)

[node name="NPCTitle" type="Label" parent="DialoguePanel/VBoxContainer/NPCInfo/NPCNameContainer"]
layout_mode = 2
text = "Title or Role"
theme_type_variation = &"HeaderSmall"
modulate = Color(0.2, 0.2, 0.2, 1)

[node name="CloseButton" type="Button" parent="DialoguePanel/VBoxContainer/NPCInfo"]
layout_mode = 2
text = "‚ùå"

[node name="HSeparator" type="HSeparator" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2

[node name="DialogueContent" type="VBoxContainer" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel/VBoxContainer/DialogueContent"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 80)
bbcode_enabled = true
text = "NPC dialogue will appear here..."
fit_content = true
scroll_active = false
modulate = Color(0, 0, 0, 1)

[node name="ChoicesContainer" type="VBoxContainer" parent="DialoguePanel/VBoxContainer/DialogueContent"]
layout_mode = 2

[node name="Choice1" type="Button" parent="DialoguePanel/VBoxContainer/DialogueContent/ChoicesContainer"]
layout_mode = 2
text = "Choice 1"
visible = false
alignment = 0
modulate = Color(1, 1, 1, 1)

[node name="Choice2" type="Button" parent="DialoguePanel/VBoxContainer/DialogueContent/ChoicesContainer"]
layout_mode = 2
text = "Choice 2"
visible = false
alignment = 0
modulate = Color(1, 1, 1, 1)

[node name="Choice3" type="Button" parent="DialoguePanel/VBoxContainer/DialogueContent/ChoicesContainer"]
layout_mode = 2
text = "Choice 3"
visible = false
alignment = 0
modulate = Color(1, 1, 1, 1)

[node name="Choice4" type="Button" parent="DialoguePanel/VBoxContainer/DialogueContent/ChoicesContainer"]
layout_mode = 2
text = "Choice 4"
visible = false
alignment = 0
modulate = Color(1, 1, 1, 1)

[node name="Choice5" type="Button" parent="DialoguePanel/VBoxContainer/DialogueContent/ChoicesContainer"]
layout_mode = 2
text = "Choice 5"
visible = false
alignment = 0
modulate = Color(1, 1, 1, 1)

[node name="HSeparator2" type="HSeparator" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2

[node name="PlayerInput" type="VBoxContainer" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2

[node name="InputLabel" type="Label" parent="DialoguePanel/VBoxContainer/PlayerInput"]
layout_mode = 2
text = "Your Response:"
modulate = Color(0, 0, 0, 1)

[node name="TextInputContainer" type="HBoxContainer" parent="DialoguePanel/VBoxContainer/PlayerInput"]
layout_mode = 2

[node name="PlayerTextInput" type="LineEdit" parent="DialoguePanel/VBoxContainer/PlayerInput/TextInputContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type your message to Moses..."
modulate = Color(1, 1, 1, 1)

[node name="SendButton" type="Button" parent="DialoguePanel/VBoxContainer/PlayerInput/TextInputContainer"]
layout_mode = 2
text = "Send"
modulate = Color(1, 1, 1, 1)

[node name="QuickResponses" type="HBoxContainer" parent="DialoguePanel/VBoxContainer/PlayerInput"]
layout_mode = 2

[node name="AskAboutLaw" type="Button" parent="DialoguePanel/VBoxContainer/PlayerInput/QuickResponses"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tell me about the Law"
modulate = Color(0.8, 1, 0.8, 1)

[node name="AskAboutExodus" type="Button" parent="DialoguePanel/VBoxContainer/PlayerInput/QuickResponses"]
layout_mode = 2
size_flags_horizontal = 3
text = "What was Egypt like?"
modulate = Color(0.8, 1, 0.8, 1)

[node name="AskAboutGod" type="Button" parent="DialoguePanel/VBoxContainer/PlayerInput/QuickResponses"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tell me about God"
modulate = Color(0.8, 0.8, 1, 1)

[node name="HSeparator3" type="HSeparator" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2

[node name="ActionButtons" type="HBoxContainer" parent="DialoguePanel/VBoxContainer"]
layout_mode = 2

[node name="ActionButtonsBG" type="NinePatchRect" parent="DialoguePanel/VBoxContainer/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_dialogue_panel")

[node name="ContinueButton" type="Button" parent="DialoguePanel/VBoxContainer/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Continue"
visible = false
modulate = Color(1, 1, 1, 1)

[node name="EndButton" type="Button" parent="DialoguePanel/VBoxContainer/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "End Conversation"
modulate = Color(1, 1, 1, 1)

[connection signal="pressed" from="DialoguePanel/VBoxContainer/NPCInfo/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="text_submitted" from="DialoguePanel/VBoxContainer/PlayerInput/TextInputContainer/PlayerTextInput" to="." method="_on_player_text_submitted"]
[connection signal="pressed" from="DialoguePanel/VBoxContainer/PlayerInput/TextInputContainer/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="pressed" from="DialoguePanel/VBoxContainer/PlayerInput/QuickResponses/AskAboutLaw" to="." method="_on_quick_response_pressed" binds= ["Tell me about the Law you received from God"]]
[connection signal="pressed" from="DialoguePanel/VBoxContainer/PlayerInput/QuickResponses/AskAboutExodus" to="." method="_on_quick_response_pressed" binds= ["What was it like leading the people out of Egypt?"]]
[connection signal="pressed" from="DialoguePanel/VBoxContainer/PlayerInput/QuickResponses/AskAboutGod" to="." method="_on_quick_response_pressed" binds= ["Tell me about your encounters with the Almighty"]]
[connection signal="pressed" from="DialoguePanel/VBoxContainer/ActionButtons/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="DialoguePanel/VBoxContainer/ActionButtons/EndButton" to="." method="_on_end_button_pressed"]